crates/pcbc/tests/snapshots/bom__bom_capacitors_json.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom boards/Capacitors.zen -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "designators": [
      "C1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C1.C",
        "designator": "C1",
        "package": "0402",
        "value": "100nF 16V X7R",
        "description": "100nF 16V X7R",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000000100",
          "min": "0.000000100",
          "max": "0.000000100",
          "unit": "Farads"
        },
        "dielectric": "X7R",
        "voltage": {
          "nominal": "16",
          "min": "16",
          "max": "16",
          "unit": "Volts"
        }
      }
    ]
  },
  {
    "designators": [
      "C2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C2.C",
        "designator": "C2",
        "package": "0805",
        "value": "10uF 25V X5R",
        "description": "10uF 25V X5R",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000010",
          "min": "0.000010",
          "max": "0.000010",
          "unit": "Farads"
        },
        "dielectric": "X5R",
        "voltage": {
          "nominal": "25",
          "min": "25",
          "max": "25",
          "unit": "Volts"
        }
      }
    ]
  },
  {
    "designators": [
      "C3"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C3.C",
        "designator": "C3",
        "package": "0603",
        "value": "1uF",
        "description": "1uF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000001",
          "min": "0.000001",
          "max": "0.000001",
          "unit": "Farads"
        }
      }
    ]
  }
]
--- STDERR ---
