crates/pcbc/tests/snapshots/bom__bom_default.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---
Legend:
 ■  Plenty available / easy to source         ■  House component       
 ■  Limited inventory / harder to source      ■  DNP (Do Not Populate) 
 ■  Insufficient stock / hard to source                                
┌──────┬─────────────┬─────┬──────────────┬───────────┬─────────────┐
│ Qty  ┆ Designators ┆ MPN ┆ Manufacturer ┆ Package   ┆ Description │
╞══════╪═════════════╪═════╪══════════════╪═══════════╪═════════════╡
│    1 ┆ C1          ┆     ┆              ┆ 0402      ┆ 100nF       │
│    1 ┆ C2          ┆     ┆              ┆ 0805      ┆ 10uF        │
│    2 ┆ C3,C4       ┆     ┆              ┆ 0402      ┆ 22pF        │
│    1 ┆ D1          ┆     ┆              ┆ 0603      ┆ LED GREEN   │
│    1 ┆ D2          ┆     ┆              ┆ 0603      ┆ LED RED     │
│    2 ┆ R1,R2       ┆     ┆              ┆ 0603      ┆ 330         │
│    1 ┆ R3          ┆     ┆              ┆ 0603      ┆ 10k         │
│    1 ┆ Y1          ┆     ┆              ┆ 5032_2Pin ┆ 16MHz 18pF  │
└──────┴─────────────┴─────┴──────────────┴───────────┴─────────────┘
--- STDERR ---
