crates/pcbc/tests/snapshots/bom__bom_json.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom boards/TestBoard.zen -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "designators": [
      "C1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C1.C",
        "designator": "C1",
        "package": "0402",
        "value": "100nF",
        "description": "100nF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000000100",
          "min": "0.000000100",
          "max": "0.000000100",
          "unit": "Farads"
        }
      }
    ]
  },
  {
    "designators": [
      "C2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C2.C",
        "designator": "C2",
        "package": "0805",
        "value": "10uF",
        "description": "10uF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000010",
          "min": "0.000010",
          "max": "0.000010",
          "unit": "Farads"
        }
      }
    ]
  },
  {
    "designators": [
      "C3",
      "C4"
    ],
    "quantity": 2,
    "members": [
      {
        "path": "C3.C",
        "designator": "C3",
        "package": "0402",
        "value": "22pF",
        "description": "22pF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000000000022",
          "min": "0.000000000022",
          "max": "0.000000000022",
          "unit": "Farads"
        }
      },
      {
        "path": "C4.C",
        "designator": "C4",
        "package": "0402",
        "value": "22pF",
        "description": "22pF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000000000022",
          "min": "0.000000000022",
          "max": "0.000000000022",
          "unit": "Farads"
        }
      }
    ]
  },
  {
    "designators": [
      "D1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "LED1.D1.LED",
        "designator": "D1",
        "package": "0603",
        "value": "LED GREEN",
        "description": "LED GREEN",
        "component_type": "Led",
        "color": "green"
      }
    ]
  },
  {
    "designators": [
      "D2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "LED2.D1.LED",
        "designator": "D2",
        "package": "0603",
        "value": "LED RED",
        "description": "LED RED",
        "component_type": "Led",
        "color": "red"
      }
    ]
  },
  {
    "designators": [
      "R1",
      "R2"
    ],
    "quantity": 2,
    "members": [
      {
        "path": "LED1.R1.R",
        "designator": "R1",
        "package": "0603",
        "value": "330",
        "description": "330",
        "component_type": "Resistor",
        "resistance": {
          "nominal": "330",
          "min": "330",
          "max": "330",
          "unit": "Ohms"
        }
      },
      {
        "path": "LED2.R1.R",
        "designator": "R2",
        "package": "0603",
        "value": "330",
        "description": "330",
        "component_type": "Resistor",
        "resistance": {
          "nominal": "330",
          "min": "330",
          "max": "330",
          "unit": "Ohms"
        }
      }
    ]
  },
  {
    "designators": [
      "R3"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "R1.R",
        "designator": "R3",
        "package": "0603",
        "value": "10k",
        "description": "10k",
        "component_type": "Resistor",
        "resistance": {
          "nominal": "10000",
          "min": "10000",
          "max": "10000",
          "unit": "Ohms"
        }
      }
    ]
  },
  {
    "designators": [
      "Y1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "X1.Y",
        "designator": "Y1",
        "package": "5032_2Pin",
        "value": "16MHz 18pF",
        "description": "16MHz 18pF",
        "component_type": "Crystal",
        "frequency": {
          "nominal": "16000000",
          "min": "16000000",
          "max": "16000000",
          "unit": "Hertz"
        },
        "load_capacitance": {
          "nominal": "0.000000000018",
          "min": "0.000000000018",
          "max": "0.000000000018",
          "unit": "Farads"
        }
      }
    ]
  }
]
--- STDERR ---
