crates/pcbc/tests/snapshots/bom__bom_kicad_fallback_json.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom kicad-bom.zen -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "designators": [
      "R1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "kicad::R1",
        "designator": "R1",
        "mpn": "ERJ-2RKF1003X",
        "package": "R_0402_1005Metric",
        "value": "ERJ-2RKF1003X",
        "description": "Resistor"
      }
    ],
    "mpn": "ERJ-2RKF1003X",
    "package": "R_0402_1005Metric",
    "value": "ERJ-2RKF1003X",
    "description": "Resistor"
  },
  {
    "designators": [
      "R2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "kicad::R2",
        "designator": "R2",
        "mpn": "ERJ-2RKF1003X",
        "package": "R_0402_1005Metric",
        "value": "ERJ-2RKF1003X",
        "description": "Resistor",
        "dnp": true
      }
    ],
    "mpn": "ERJ-2RKF1003X",
    "package": "R_0402_1005Metric",
    "value": "ERJ-2RKF1003X",
    "description": "Resistor",
    "dnp": true
  }
]
--- STDERR ---
