crates/pcbc/tests/snapshots/bom__bom_module_dnp_json.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom boards/ModuleDnp.zen -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "designators": [
      "C2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C2.C",
        "designator": "C2",
        "package": "0805",
        "value": "10uF",
        "description": "10uF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000010",
          "min": "0.000010",
          "max": "0.000010",
          "unit": "Farads"
        }
      }
    ]
  },
  {
    "designators": [
      "R1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "R1.R",
        "designator": "R1",
        "package": "0603",
        "value": "1k",
        "description": "1k",
        "component_type": "Resistor",
        "resistance": {
          "nominal": "1000",
          "min": "1000",
          "max": "1000",
          "unit": "Ohms"
        }
      }
    ]
  },
  {
    "designators": [
      "C1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "C1_DNP.C",
        "designator": "C1",
        "package": "0402",
        "value": "100nF",
        "description": "100nF",
        "component_type": "Capacitor",
        "capacitance": {
          "nominal": "0.000000100",
          "min": "0.000000100",
          "max": "0.000000100",
          "unit": "Farads"
        },
        "dnp": true
      }
    ]
  },
  {
    "designators": [
      "R2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "R2_DNP.R",
        "designator": "R2",
        "package": "0603",
        "value": "10k",
        "description": "10k",
        "component_type": "Resistor",
        "resistance": {
          "nominal": "10000",
          "min": "10000",
          "max": "10000",
          "unit": "Ohms"
        },
        "dnp": true
      }
    ]
  }
]
--- STDERR ---
