crates/pcbc/tests/snapshots/bom__bom_parametric_generics_json.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom boards/ParametricGenerics.zen --offline -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "designators": [
      "D1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "D1.D",
        "designator": "D1",
        "package": "SOD-123",
        "value": "1A 40V Schottky Rectifier",
        "description": "1A 40V Schottky Rectifier",
        "component_type": "Rectifier",
        "technology": "Schottky",
        "reverse_voltage": {
          "nominal": "40",
          "min": "40",
          "max": "40",
          "unit": "Volts"
        },
        "forward_current": {
          "nominal": "1",
          "min": "1",
          "max": "1",
          "unit": "Amperes"
        },
        "forward_voltage": {
          "nominal": "0.500",
          "min": "0.500",
          "max": "0.500",
          "unit": "Volts"
        }
      }
    ]
  },
  {
    "designators": [
      "D2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "D2.LED",
        "designator": "D2",
        "package": "0402",
        "value": "LED RED 2V",
        "description": "LED RED 2V",
        "component_type": "Led",
        "color": "red",
        "forward_voltage": {
          "nominal": "2",
          "min": "2",
          "max": "2",
          "unit": "Volts"
        },
        "forward_current": {
          "nominal": "0.020",
          "min": "0.020",
          "max": "0.020",
          "unit": "Amperes"
        }
      }
    ]
  },
  {
    "designators": [
      "D3"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "TVS1.D",
        "designator": "D3",
        "package": "DO-219AB",
        "value": "5V TVS Diode 400W",
        "description": "5V TVS Diode 400W",
        "component_type": "Tvs",
        "direction": "Unidirectional",
        "reverse_standoff_voltage": {
          "nominal": "5",
          "min": "5",
          "max": "5",
          "unit": "Volts"
        },
        "reverse_clamping_voltage": {
          "nominal": "9",
          "min": "9",
          "max": "9",
          "unit": "Volts"
        },
        "peak_pulse_power": {
          "nominal": "400",
          "min": "400",
          "max": "400",
          "unit": "Watts"
        },
        "capacitance": {
          "nominal": "0.000000000030",
          "min": "0.000000000030",
          "max": "0.000000000030",
          "unit": "Farads"
        }
      }
    ]
  },
  {
    "designators": [
      "D4"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "Z1.D",
        "designator": "D4",
        "package": "SOD-123",
        "value": "5.1V Zener 500mW",
        "description": "5.1V Zener 500mW",
        "component_type": "Zener",
        "zener_voltage": {
          "nominal": "5.1",
          "min": "5.1",
          "max": "5.1",
          "unit": "Volts"
        },
        "power": {
          "nominal": "0.500",
          "min": "0.500",
          "max": "0.500",
          "unit": "Watts"
        }
      }
    ]
  },
  {
    "designators": [
      "FB1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "FB1.FB",
        "designator": "FB1",
        "package": "0603",
        "value": "600 500mA 100MHz",
        "description": "600 500mA 100MHz",
        "component_type": "FerriteBead",
        "impedance": {
          "nominal": "600",
          "min": "600",
          "max": "600",
          "unit": "Ohms"
        },
        "frequency": {
          "nominal": "100000000",
          "min": "100000000",
          "max": "100000000",
          "unit": "Hertz"
        },
        "current": {
          "nominal": "0.500",
          "min": "0.500",
          "max": "0.500",
          "unit": "Amperes"
        },
        "dcr": {
          "nominal": "0.200",
          "min": "0.200",
          "max": "0.200",
          "unit": "Ohms"
        }
      }
    ]
  },
  {
    "designators": [
      "J1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "J1.PH",
        "designator": "J1",
        "package": "PinHeader_1x02_P2.54mm_Vertical",
        "value": "2.54mm 2 x 1 THT Vertical Male",
        "description": "2.54mm 2 x 1 THT Vertical Male",
        "component_type": "PinHeader",
        "pitch": "2.54mm",
        "rows": 1,
        "pins": 2,
        "orientation": "Vertical",
        "gender": "Male",
        "mount": "THT"
      }
    ]
  },
  {
    "designators": [
      "L1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "L1.L",
        "designator": "L1",
        "package": "0603",
        "value": "4.7uH 1A",
        "description": "4.7uH 1A",
        "component_type": "Inductor",
        "inductance": {
          "nominal": "0.0000047",
          "min": "0.0000047",
          "max": "0.0000047",
          "unit": "Henries"
        },
        "current": {
          "nominal": "1",
          "min": "1",
          "max": "1",
          "unit": "Amperes"
        },
        "dcr": {
          "nominal": "0.120",
          "min": "0.120",
          "max": "0.120",
          "unit": "Ohms"
        }
      }
    ]
  },
  {
    "designators": [
      "R1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "R1.R",
        "designator": "R1",
        "package": "0603",
        "value": "10k 250mW",
        "description": "10k 250mW",
        "component_type": "Resistor",
        "resistance": {
          "nominal": "10000",
          "min": "10000",
          "max": "10000",
          "unit": "Ohms"
        },
        "power": {
          "nominal": "0.250",
          "min": "0.250",
          "max": "0.250",
          "unit": "Watts"
        }
      }
    ]
  },
  {
    "designators": [
      "Y1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "Y1.Y",
        "designator": "Y1",
        "package": "3215_2Pin",
        "value": "32.768kHz 12.5pF",
        "description": "32.768kHz 12.5pF",
        "component_type": "Crystal",
        "frequency": {
          "nominal": "32768.000",
          "min": "32768.000",
          "max": "32768.000",
          "unit": "Hertz"
        },
        "load_capacitance": {
          "nominal": "0.0000000000125",
          "min": "0.0000000000125",
          "max": "0.0000000000125",
          "unit": "Farads"
        },
        "esr": {
          "nominal": "70000",
          "min": "70000",
          "max": "70000",
          "unit": "Ohms"
        }
      }
    ]
  }
]
--- STDERR ---
