crates/pcbc/tests/snapshots/bom__bom_simple_resistors_table.snap
---
source: crates/pcbc/tests/bom.rs
assertion_line: 270
expression: output
---
Command: pcbc bom boards/SimpleResistors.zen -f table
Exit Code: 0

--- STDOUT ---
Legend:
 ■  Plenty available / easy to source         ■  House component       
 ■  Limited inventory / harder to source      ■  DNP (Do Not Populate) 
 ■  Insufficient stock / hard to source                                
┌──────┬─────────────┬─────┬──────────────┬─────────┬─────────────┐
│ Qty  ┆ Designators ┆ MPN ┆ Manufacturer ┆ Package ┆ Description │
╞══════╪═════════════╪═════╪══════════════╪═════════╪═════════════╡
│    2 ┆ R1,R2       ┆     ┆              ┆ 0603    ┆ 1k          │
│    1 ┆ R3          ┆     ┆              ┆ 0402    ┆ 4.7k        │
└──────┴─────────────┴─────┴──────────────┴─────────┴─────────────┘
--- STDERR ---
