crates/pcbc/tests/snapshots/bom__bom_skip_bom_json.snap
---
source: crates/pcbc/tests/bom.rs
expression: output
---
Command: pcbc bom boards/SkipBom.zen -f json
Exit Code: 0

--- STDOUT ---
[
  {
    "designators": [
      "U1"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "normal",
        "designator": "U1",
        "mpn": "RC0603FR-071KL",
        "manufacturer": "Yageo"
      }
    ],
    "mpn": "RC0603FR-071KL",
    "manufacturer": "Yageo"
  },
  {
    "designators": [
      "U2"
    ],
    "quantity": 1,
    "members": [
      {
        "path": "normal2",
        "designator": "U2",
        "mpn": "RC0603FR-0710KL",
        "manufacturer": "Yageo"
      }
    ],
    "mpn": "RC0603FR-0710KL",
    "manufacturer": "Yageo"
  }
]
--- STDERR ---
