crates/pcbc/tests/snapshots/bom__bom_skip_bom_table.snap
---
source: crates/pcb/tests/bom.rs
expression: output
---
Command: pcbc bom boards/SkipBom.zen -f table
Exit Code: 0

--- STDOUT ---
Legend:
 ■  Plenty available / easy to source         ■  House component       
 ■  Limited inventory / harder to source      ■  DNP (Do Not Populate) 
 ■  Insufficient stock / hard to source                                
┌──────┬─────────────┬─────────────────┬──────────────┬─────────┬─────────────┐
│ Qty  ┆ Designators ┆ MPN             ┆ Manufacturer ┆ Package ┆ Description │
╞══════╪═════════════╪═════════════════╪══════════════╪═════════╪═════════════╡
│    1 ┆ U2          ┆ RC0603FR-071KL  ┆ Yageo        ┆         ┆             │
│    1 ┆ U3          ┆ RC0603FR-0710KL ┆ Yageo        ┆         ┆             │
└──────┴─────────────┴─────────────────┴──────────────┴─────────┴─────────────┘
--- STDERR ---
